@@ -174,6 +174,8 @@ Bug fixes:
   (Jun Furuse and Hongbo Zhang, report by Dmitry Grebeniuk)
 - PR#5201: ocamlbuild: add --norc to the bash invocation to help performances
   (user 'daweil')
+- PR#5406 ocamlbuild: "tag 'package' does not expect a parameter"
+  (Gabriel Scherer)
 - PR#5598: follow-up fix related to PR#6165
   (Damien Doligez)
 - PR#5820: Fix camlp4 lexer roll back problem
